@@ -260,7 +260,7 @@
 
     <sect2 id="syslog-open">
     	<title>To View a Log</title>
-    	<para>To view a log, choose <menuchoice><guimenu>Log</guimenu><guimenuitem>Open</guimenuitem></menuchoice>. 
+    	<para>To view a log, choose <menuchoice><guimenu>File</guimenu><guimenuitem>Open</guimenuitem></menuchoice>. 
     	In the <guilabel>Open Log</guilabel> dialog, select the 
         log that you want to open, then click 
     	<guibutton>Open</guibutton>. Use the scrollbars to scroll through the
@@ -295,7 +295,7 @@
     <title>To Hide the Sidebar</title>
     <para>To hide the left sidebar, which contains the log list and calendar,
     just select the
-    <menuchoice><guimenu>View</guimenu><guimenuitem>Sidebar</guimenuitem></menuchoice>
+    <menuchoice><guimenu>View</guimenu><guimenuitem>Side pane</guimenuitem></menuchoice>
     menu option.</para>
     </sect2>
     
@@ -310,7 +310,7 @@
     	seconds, the log name will turn back to normal in the list.</para>
       
     	<para>To stop monitoring a specific log, uncheck the
-        <menuchoice><guimenu>Log</guimenu><guimenuitem>Monitor</guimenuitem></menuchoice>
+        <menuchoice><guimenu>View</guimenu><guimenuitem>Monitor</guimenuitem></menuchoice>
         option. Check this option again to turn monitoring back on.</para>
 
     </sect2>
@@ -347,14 +347,14 @@
     <sect2 id="syslog-close">
     	<title>To Close a Log</title>
     	<para>To close a log, choose
-    	<menuchoice><guimenu>Log</guimenu><guimenuitem>Close</guimenuitem></menuchoice>.
+    	<menuchoice><guimenu>File</guimenu><guimenuitem>Close</guimenuitem></menuchoice>.
     	</para>
     </sect2>
     
     <sect2 id="syslog-exit">
     	<title>To Exit &app;</title>
     	<para>To exit <application>&app;</application>, choose
-    	<menuchoice><guimenu>Log</guimenu><guimenuitem>Quit</guimenuitem></menuchoice>.
+    	<menuchoice><guimenu>File</guimenu><guimenuitem>Quit</guimenuitem></menuchoice>.
     	</para>
     </sect2>
  
